# pretix-auth-okta

./: LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
pretix_auth_okta/: __init__.py  apps.py  auth.py  urls.py  views.py
pretix_auth_okta/locale/de_Informal/LC_MESSAGES/: django.po
