[project]
name = "pretix-auth-okta"
dynamic = ["version"]
description = "Supports pretix backend auth using Okta"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [

]

[project.entry-points."pretix.plugin"]
pretix_auth_okta = "pretix_auth_okta:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretix/pretix-auth-okta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_auth_okta.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false